--- a/.gitignore
+++ b/.gitignore
@@ -216,5 +216,5 @@ $RECYCLE.BIN/
 *.lnk
 
 # End of https://www.gitignore.io/api/vim,linux,python,pycharm,windows,notepadpp
-/misc/
-/test_docs/
+/ref/
+/vlc_analyze_bookmarks.txt
